force-app/main/default/objects/sumoapp__AvailabilityLineItem__c/sumoapp__AvailabilityLineItem__c.object-meta.xml
<CustomObject>
    <label>SUMO Availability Line Item</label>
    <nameField>
        <displayFormat>ALI-{000000}</displayFormat>
        <label>Availability Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Availability Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>