force-app/main/default/objects/sumoapp__AvailabilityLineItem__c/fields/sumoapp__Availability__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Availability</label>
    <referenceTo>sumoapp__Availability__c</referenceTo>
    <relationshipLabel>Availability Items</relationshipLabel>
    <relationshipName>AvailabilityItems</relationshipName>
    <type>Lookup</type>
</CustomField>