force-app/main/default/objects/sumoapp__AvailabilityLineItem__c/fields/sumoapp__Date__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>