force-app/main/default/objects/sumoapp__AvailabilityLineItem__c/fields/sumoapp__DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DayOfWeek__c</fullName>
    <label>Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUNDAY</fullName>
                <label>Sunday</label>
            </value>
            <value>
                <fullName>MONDAY</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>TUESDAY</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>WEDNESDAY</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>THURSDAY</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>FRIDAY</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>SATURDAY</fullName>
                <label>Saturday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>