force-app/main/default/objects/sumoapp__AvailabilityLineItem__c/fields/sumoapp__EndTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EndTime__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>