force-app/main/default/objects/sumoapp__AvailabilityLineItem__c/fields/sumoapp__StartTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__StartTime__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>